# stonk.ninja

./: .dockerignore  .gitignore  .release-please-manifest.json  CHANGELOG.md  Caddyfile  Dockerfile  README.md  compose.yaml  ecosystem.config.js  pnpm-lock.yaml  release-please-config.json
.github/workflows/: build-and-push-client.yaml  build-and-push-server.yaml  build-and-push-tick-workers.yaml  build-and-push.yaml  build-client.yaml  deploy-prod.yaml  deploy.yaml  push-client.yaml  push-server.yaml  push-tick-workers.yaml  release-client.yaml  release-please.yaml  release-server.yaml  release-tick-workers.yaml  release.yaml
client/: .dockerignore  .env.example  .eslintrc.js  CHANGELOG.md  Dockerfile  README.md  middleware.ts  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.json
client/app/: layout.tsx  page.tsx
client/app/_components/: ErrorAlert.tsx  KiteLogin.tsx  UserLogin.tsx  error-alert.tsx  user-login.tsx
client/app/app/: layout.tsx
client/app/login-callback/: route.ts
client/components/: PageHeader.tsx  line-plot.tsx  page-header.tsx
deploy/: Caddyfile  Dockerfile  compose.yaml  ecosystem.config.js
deploy/helm/: Chart.yaml  helmfile.yaml  values.yaml
prod-env/: ecosystem.config.js
pulumi/: .eslintrc.js  package.json  pnpm-lock.yaml  tsconfig.json
pulumi/apps/: Pulumi.prod.yaml  Pulumi.yaml  index.ts  package.json
server/: .dockerignore  .env.example  .pylintrc  .ruff.toml  CHANGELOG.md  Dockerfile  LICENSE  README.md  pyproject.toml
server/app/: constants.py  errors.py  main.py
server/app/helpers/: auth.py  kite.py  models.py  session.py  store.py  validators.py
server/app/middlewares/: auth_session.py  authentication.py  response_encoder.py
server/app/models/: integration.py  tick.py
server/app/routes/: auth.py  auth_routes.py  integration_routes.py  processes.py  session.py  session_routes.py  tick_routes.py  ticks.py
server/app/services/: cache.py  db.py  env.py  kite.py  secrets.py  session.py  store.py  ticks.py
server/db/: migrate_col_to_timeseries.py  setup.py
server/jobs/tick_processor/: provider.py  recorder.py
server/scripts/: migrate_collection_to_timeseries.py  setup_database.py
tick-workers/: .dockerignore  .env.example  CHANGELOG.md  Dockerfile  README.md  package.json  pnpm-lock.yaml  tsconfig.json  types.ts
tick-workers/services/: broadcast.ts  db.ts  env.ts  instruments.ts
tick-workers/src/: global.d.ts  index.ts
tick-workers/workers/: emitter.ts  producer.ts  recorder.ts
(+48 files in other folders)
