[tool.poetry]
name = "ka-ching"
version = "0.1.0"
description = ""
authors = ["Rudraprasad Das <brayn003@gmail.com>"]
packages = [
    {include = "app", from = "."}
]


[tool.poetry.dependencies]
python = "^3.12"
pymongo = "^4.6.2"
python-dotenv = "^1.0.1"
pytz = "^2024.1"
fastapi = "^0.110.0"
uvicorn = {extras = ["standard"], version = "^0.27.1"}
kiteconnect = "^5.0.1"
pydantic = "^2.6.3"


[tool.poetry.group.dev.dependencies]
ruff = "^0.3.0"
pylint = "^3.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
