[tool.poetry]
name = "stonk-ninja-server"
version = "0.1.5"
description = "Python server for running analysis on stock data"
authors = ["Rudraprasad Das <brayn003@gmail.com>"]
packages = [
    { include = "app", from = "." },
]


[tool.poetry.dependencies]
python = "^3.10"
python-dotenv = "^1.0.1"
pytz = "^2024.1"
uvicorn = {extras = ["standard"], version = "^0.27.1"}
kiteconnect = "^5.0.1"
itsdangerous = "^2.1.2"
fastapi = "^0.110.0"
pymongo = "^4.6.2"
email-validator = "^2.1.1"
pika = "^1.3.2"


[tool.poetry.group.dev.dependencies]
ruff = "^0.3.0"
pylint = "^3.1.0"
poethepoet = "^0.25.0"


[tool.poe.tasks]
dev = "uvicorn app.main:app --use-colors --reload --reload-exclude 'app_scripts/*'"
start = "uvicorn app.main:app --host 0.0.0.0 --port 8000"
lint = [
    { cmd = "ruff check ." },
    { cmd = "pylint --rcfile=.pylintrc '**/*.py'" },
]
format = [
    { cmd = "ruff format ." },
    { cmd = "ruff check --fix ." },
]


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
